search page added

--- a/EventSystem/Site.Master
+++ b/EventSystem/Site.Master
@@ -76,7 +76,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Our ASP.NET Application</p>
             </footer>
         </div>
     </form>
