admin part started

--- a/EventSystem/Site.Master
+++ b/EventSystem/Site.Master
@@ -51,6 +51,12 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
+                        <asp:LoginView runat="server" ID="LoginViewMenu">
+                            <LoggedInTemplate>
+                                <li><a runat="server" href="~/Admin/EditCategories">Categories</a></li>
+                                <li><a runat="server" href="/Admin/EditBooks">Books</a></li>
+                            </LoggedInTemplate>
+                        </asp:LoginView>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
