--- a/EventSystem/Site.Master
+++ b/EventSystem/Site.Master
@@ -11,7 +11,7 @@
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 </head>
@@ -80,10 +80,17 @@
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
+
             <hr />
-            <footer>
-                <asp:SiteMapPath runat="server"></asp:SiteMapPath>
-                <p>&copy; <%: DateTime.Now.Year %> - Our ASP.NET Application</p>
+
+            <footer class="footer fixed-bottom">
+                <div class="container">
+
+                    <p class="text-muted">
+                        <asp:SiteMapPath runat="server"></asp:SiteMapPath>
+                    </p>
+                    <p class="text-muted">&copy; <%: DateTime.Now.Year %> - Our ASP.NET Application</p>
+                </div>
             </footer>
         </div>
     </form>
