--- a/EventSystem/Site.Master
+++ b/EventSystem/Site.Master
@@ -53,9 +53,17 @@
                         <li><a runat="server" href="~/">Home</a></li>
                         <asp:LoginView runat="server" ID="LoginViewMenu">
                             <LoggedInTemplate>
-                                <li><a runat="server" href="~/Admin/EditCategories">Categories</a></li>
-                                <li><a runat="server" href="~/Admin/EditEvents">Events</a></li>
+                                <li><a runat="server" href="~/Events/All">Events</a></li>
                             </LoggedInTemplate>
+                            <RoleGroups>
+                                <asp:RoleGroup Roles="admin">
+                                    <ContentTemplate>
+                                        <li><a runat="server" href="~/Admin/EditCategories">Edit Categories</a></li>
+                                        <li><a runat="server" href="~/Admin/EditEvents">Edit Events</a></li>
+                                        <li><a runat="server" href="~/Admin/EditUsers">Edit Users</a></li>
+                                    </ContentTemplate>
+                                </asp:RoleGroup>
+                            </RoleGroups>
                         </asp:LoginView>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
